@@ -1,27 +1,36 @@
 package de.twenty11.skysail.server.ext.notes.resources;
 
 import org.restlet.data.Form;
+import org.restlet.resource.Get;
 import org.restlet.resource.Post;
-import org.restlet.resource.Put;
 import org.restlet.resource.ResourceException;
 
-import de.twenty11.skysail.common.Presentation;
-import de.twenty11.skysail.common.PresentationStyle;
 import de.twenty11.skysail.common.responses.EntityDetailsResponse;
+import de.twenty11.skysail.common.responses.FormResponse;
 import de.twenty11.skysail.common.responses.SkysailResponse;
-import de.twenty11.skysail.server.core.restlet.UniqueResultServerResource2;
+import de.twenty11.skysail.common.responses.SuccessResponse;
+import de.twenty11.skysail.server.core.restlet.UniqueResultServerResource;
 import de.twenty11.skysail.server.ext.notes.NotesApplication;
 import de.twenty11.skysail.server.ext.notes.domain.Note;
 
-@Presentation(preferred = PresentationStyle.LIST2)
-public class NoteResource extends UniqueResultServerResource2<Note> {
+/**
+ * takes care of ".../notes/" and ".../notes/{id}" requests.
+ * 
+ */
+public class NoteResource extends UniqueResultServerResource<Note> {
 
-    private int noteId;
+    private Long noteId;
+    private NotesApplication app;
+
+    public NoteResource() {
+        app = (NotesApplication) getApplication();
+    }
 
     @Override
     protected void doInit() throws ResourceException {
-        // noteId = Long.valueOf((String) getRequest().getAttributes().get("id"));
-        noteId = Integer.valueOf((String) getRequest().getAttributes().get("id"));
+        if (getRequest().getAttributes().get("id") != null) {
+            noteId = new Long((String) getRequest().getAttributes().get("id"));
+        }
     }
 
     @Override
@@ -30,14 +39,23 @@ public class NoteResource extends UniqueResultServerResource2<Note> {
     }
 
     @Override
-    protected Note getData() {
-        NotesApplication app = (NotesApplication) getApplication();
+    public Note getData() {
         return app.getNotesRepository().getById(new Long(noteId));
     }
 
     @Override
     public Note getData(Form form) {
-        return new Note(null, form.getFirstValue("title"), form.getFirstValue("content"));
+        Note note = new Note(null, form.getFirstValue("title"), form.getFirstValue("content"));
+        note.setOwner(app.getCurrentUser());
+        return note;
+    }
+
+    @Get("htmlform")
+    public FormResponse<Note> createForm() {
+        FormResponse<Note> formResponse = new FormResponse<Note>(new Note(null, "", ""),
+                NotesApplication.getPostNewNotePath());
+        formResponse.setMessage("Add a new folder");
+        return formResponse;
     }
 
     // @Override
@@ -60,27 +78,33 @@ public class NoteResource extends UniqueResultServerResource2<Note> {
         return response;
     }
 
-    @Put("x-www-form-urlencoded:html")
-    public EntityDetailsResponse put(Form form) {
-
-        Note entity = getData(form);
-        entity.setPid(noteId);
-        // Set<ConstraintViolation<T>> violations = validate(entity);
-        // if (violations.size() > 0) {
-        // return new ConstraintViolationsResponse(entity, violations);
-        // }
-        // return addEntity(entity);
-
-        NotesApplication app = (NotesApplication) getApplication();
-        app.getNotesRepository().update(entity);
-        // return new FoldersResource().getEntities();
-        EntityDetailsResponse response = new EntityDetailsResponse(entity, "note");
-        response.setMessage("note entity details");
-        return response;
-    }
+    // @Put("x-www-form-urlencoded:html")
+    // public EntityDetailsResponse put(Form form) {
+    //
+    // Note entity = getData(form);
+    // entity.setPid(noteId);
+    // // Set<ConstraintViolation<T>> violations = validate(entity);
+    // // if (violations.size() > 0) {
+    // // return new ConstraintViolationsResponse(entity, violations);
+    // // }
+    // // return addEntity(entity);
+    //
+    // NotesApplication app = (NotesApplication) getApplication();
+    // app.getNotesRepository().update(entity);
+    // // return new FoldersResource().getEntities();
+    // EntityDetailsResponse response = new EntityDetailsResponse(entity, "note");
+    // response.setMessage("note entity details");
+    // return response;
+    // }
 
     @Override
     public SkysailResponse<?> addEntity(Note entity) {
+        app.getNotesRepository().add(entity);
+        return new SuccessResponse<Note>(entity);
+    }
+
+    @Override
+    public String getMessage(String key) {
         // TODO Auto-generated method stub
         return null;
     }
